...
    }

    val assetRoot = assetRoots.getOrNull(packageIndex) ?: return

    AndroidView(
            modifier = modifier.clearAndSetSemantics {
                contentDescription = "Animated jigsaw puzzle preview"
            },
            factory = { context ->
                FragmentContainerView(context).apply {
                    id = R.id.puzzle_preview_renderer_container
                    isClickable = false
                    isFocusable = false
...
